tests/NormalTests/paczka1/fuzzy1/93855240.err
Error in line 8: XdnwVpe5Xq A513 20,8
Error in line 5: nVOlAIc S730 76,5
Error in line 10: A513 A212 54,8
Error in line 29: CXDM1o A513 307,67
